final preprocess fix, i hope

--- a/Work3/EDA.ipynb
+++ b/Work3/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,161 @@
     "df_satimage = data_processor.preprocess_dataset(df_satimage)\n",
     "df_splice   = data_processor.preprocess_dataset(df_splice)\n",
     "df_vowel    = data_processor.preprocess_dataset(df_vowel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duplicated Rows (ignoring labels) and their Labels:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>attribute_1_A</th>\n",
+       "      <th>attribute_1_C</th>\n",
+       "      <th>attribute_1_D</th>\n",
+       "      <th>attribute_1_G</th>\n",
+       "      <th>attribute_1_T</th>\n",
+       "      <th>attribute_2_A</th>\n",
+       "      <th>attribute_2_C</th>\n",
+       "      <th>attribute_2_D</th>\n",
+       "      <th>attribute_2_G</th>\n",
+       "      <th>attribute_2_T</th>\n",
+       "      <th>...</th>\n",
+       "      <th>attribute_59_C</th>\n",
+       "      <th>attribute_59_G</th>\n",
+       "      <th>attribute_59_N</th>\n",
+       "      <th>attribute_59_T</th>\n",
+       "      <th>attribute_60_A</th>\n",
+       "      <th>attribute_60_C</th>\n",
+       "      <th>attribute_60_G</th>\n",
+       "      <th>attribute_60_N</th>\n",
+       "      <th>attribute_60_T</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1021</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>IE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1968</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 288 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      attribute_1_A  attribute_1_C  attribute_1_D  attribute_1_G  \\\n",
+       "1021            0.0            1.0            0.0            0.0   \n",
+       "1968            0.0            1.0            0.0            0.0   \n",
+       "\n",
+       "      attribute_1_T  attribute_2_A  attribute_2_C  attribute_2_D  \\\n",
+       "1021            0.0            0.0            0.0            0.0   \n",
+       "1968            0.0            0.0            0.0            0.0   \n",
+       "\n",
+       "      attribute_2_G  attribute_2_T  ...  attribute_59_C  attribute_59_G  \\\n",
+       "1021            0.0            1.0  ...             0.0             1.0   \n",
+       "1968            0.0            1.0  ...             0.0             1.0   \n",
+       "\n",
+       "      attribute_59_N  attribute_59_T  attribute_60_A  attribute_60_C  \\\n",
+       "1021             0.0             0.0             1.0             0.0   \n",
+       "1968             0.0             0.0             1.0             0.0   \n",
+       "\n",
+       "      attribute_60_G  attribute_60_N  attribute_60_T  label  \n",
+       "1021             0.0             0.0             0.0     IE  \n",
+       "1968             0.0             0.0             0.0      N  \n",
+       "\n",
+       "[2 rows x 288 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Combine the data and labels for reference but separate the label for duplicate calculation\n",
+    "df_splice_combined = df_splice.copy()\n",
+    "df_splice_combined['label'] = labels_splice\n",
+    "\n",
+    "# Find duplicates in `df_splice` without considering the labels\n",
+    "duplicates_no_label = df_splice[df_splice.duplicated(keep=False)]\n",
+    "\n",
+    "# Map labels to the duplicated rows for easier viewing\n",
+    "duplicates_with_labels = duplicates_no_label.copy()\n",
+    "duplicates_with_labels['label'] = labels_splice[duplicates_no_label.index]\n",
+    "\n",
+    "# Print duplicates and their corresponding labels\n",
+    "print(\"Duplicated Rows (ignoring labels) and their Labels:\")\n",
+    "display(duplicates_with_labels)\n"
    ]
   }
  ],
