--- a/Work3/EDA.ipynb
+++ b/Work3/EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,6 +546,62 @@
     "    plt.xlabel('Predicted Clusters')\n",
     "    plt.ylabel('True Labels')\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered data saved to results/FUZZY_satimage_results.csv\n",
+      "Filtered data saved to results/FUZZY_splice_results.csv\n",
+      "Filtered data saved to results/FUZZY_vowel_results.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Define the m and xi values you are using\n",
+    "m_values = [1.5, 2.5, 3.5]\n",
+    "xi_values = [0.3, 0.5, 0.7]\n",
+    "\n",
+    "def filter_csv(input_filename, output_filename, m_values, xi_values):\n",
+    "    # Load the CSV file\n",
+    "    df = pd.read_csv(input_filename)\n",
+    "    \n",
+    "    # Ensure 'm' and 'xi' columns exist\n",
+    "    if 'm' not in df.columns or 'xi' not in df.columns:\n",
+    "        print(f\"Error: 'm' or 'xi' column not found in {input_filename}\")\n",
+    "        return\n",
+    "    \n",
+    "    # Filter rows where 'm' is in m_values and 'xi' is in xi_values\n",
+    "    filtered_df = df[df['m'].isin(m_values) & df['xi'].isin(xi_values)]\n",
+    "    \n",
+    "    # Save the filtered DataFrame to a new CSV file\n",
+    "    filtered_df.to_csv(output_filename, index=False)\n",
+    "    print(f'Filtered data saved to {output_filename}')\n",
+    "\n",
+    "# Path to the results folder\n",
+    "results_folder = \"results/\"\n",
+    "\n",
+    "# List of your input and output filenames\n",
+    "datasets = [\n",
+    "    ('FUZZY_satimage_results_unfiltered.csv', 'FUZZY_satimage_results.csv'),\n",
+    "    ('FUZZY_splice_results_unfiltered.csv', 'FUZZY_splice_results.csv'),\n",
+    "    ('FUZZY_vowel_results_unfiltered.csv', 'FUZZY_vowel_results.csv')\n",
+    "]\n",
+    "\n",
+    "# Loop through each dataset and apply the filtering\n",
+    "for input_file, output_file in datasets:\n",
+    "    input_path = os.path.join(results_folder, input_file)\n",
+    "    output_path = os.path.join(results_folder, output_file)\n",
+    "    filter_csv(input_path, output_path, m_values, xi_values)\n"
    ]
   }
  ],
