--- a/Work3/tests.ipynb
+++ b/Work3/tests.ipynb
@@ -743,6 +743,74 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully processed FUZZY_satimage_results_MAX.csv\n",
+      "Successfully processed FUZZY_splice_results_MAX.csv\n",
+      "Successfully processed FUZZY_vowel_results_MAX.csv\n",
+      "Combined CSV saved as results/fuzzy_results.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Define the directory containing the CSV files\n",
+    "results_dir = \"results/\"  # Change this to the absolute path if necessary\n",
+    "\n",
+    "# Define a list of tuples containing file names and their corresponding dataset names\n",
+    "files = [\n",
+    "    (\"FUZZY_satimage_results_MAX.csv\", \"satimage\"),\n",
+    "    (\"FUZZY_splice_results_MAX.csv\", \"splice\"),\n",
+    "    (\"FUZZY_vowel_results_MAX.csv\", \"vowel\")\n",
+    "]\n",
+    "\n",
+    "# Initialize an empty list to hold individual DataFrames\n",
+    "dataframes = []\n",
+    "\n",
+    "for file_name, dataset_name in files:\n",
+    "    file_path = os.path.join(results_dir, file_name)\n",
+    "    try:\n",
+    "        # Read the CSV file into a DataFrame\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        \n",
+    "        # Add a new column 'dataset' with the corresponding dataset name\n",
+    "        df['dataset'] = dataset_name\n",
+    "        \n",
+    "        # Append the DataFrame to the list\n",
+    "        dataframes.append(df)\n",
+    "        \n",
+    "        print(f\"Successfully processed {file_name}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"Error: {file_name} not found in {results_dir}. Please check the file path.\")\n",
+    "    except pd.errors.EmptyDataError:\n",
+    "        print(f\"Error: {file_name} is empty.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred while processing {file_name}: {e}\")\n",
+    "\n",
+    "if dataframes:\n",
+    "    # Concatenate all DataFrames into a single DataFrame\n",
+    "    combined_df = pd.concat(dataframes, ignore_index=True)\n",
+    "    \n",
+    "    # Specify the output file name\n",
+    "    output_file = os.path.join(results_dir, \"fuzzy_results.csv\")\n",
+    "    \n",
+    "    # Save the combined DataFrame to a new CSV file\n",
+    "    combined_df.to_csv(output_file, index=False)\n",
+    "    \n",
+    "    print(f\"Combined CSV saved as {output_file}\")\n",
+    "else:\n",
+    "    print(\"No data to combine.\")\n"
+   ]
   }
  ],
  "metadata": {
